--- a/views/shift-member-details.ejs
+++ b/views/shift-member-details.ejs
@@ -132,7 +132,7 @@ if(role === 'Admin'){
                           }else{
                             display = "d-none"
                           }
-                       }else if(patrolReport.startShift === '0700' && patrolReport.startShift === '1500'){
+                       }else {
                           if(patrolReport.date === todayDate ){
                             display = "d-block";
                           }else{
