--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -85,7 +85,7 @@
           </button>
         </form>
 
-        <div class="text-center">
+        <div class="text-center d-none">
           <a class="fs--1 fw-bold" href="/sign-up">Create an account</a>
         </div>
       </div>
