already finalising pb system

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -94,10 +94,23 @@
                     >
                       <div class="accordion-body pt-0">
                         <a href="/shift-member/view"
-                          ><strong>Visit to location patrol</strong></a
+                          ><strong>Visit to shift member patrol</strong></a
                         >
-                        by submitting & viewing patrol report daily based on
-                        your location, shift etc.
+                        by submitting through scan qr in which available at designated patrol area and view the shift member patrol location progress.
+                      </div>
+                    </div>
+                    <div
+                      class="accordion-collapse collapse show"
+                      id="collapse-home-reports-2"
+                      aria-labelledby="headingOne"
+                      data-bs-parent="#accordionExample"
+                    >
+                      <div class="accordion-body pt-0">
+                        <a href="/patrol-unit/view"
+                          ><strong>Visit to patrol unit</strong></a
+                        >
+                        by submitting & viewing patrol report daily from 0800hrs until 1700hrs based on four
+                        locations.
                       </div>
                     </div>
                   </div>
