Fix bug in shift-member patrol

--- a/views/shift-member-submit.ejs
+++ b/views/shift-member-submit.ejs
@@ -13,15 +13,16 @@
           <h4 class="text-1000">Choose your full name</h4>
 
           <% if (patrolReport) { %>
+          <p><strong>Location : <%= patrolReport.location %></strong></p>
           <p>Date: <%= patrolReport.date %></p>
           <p>Report: <%= patrolReport.reportId %></p>
 
           <% if (patrolReport.staff && patrolReport.staff.length > 0) { %>
-            <% patrolReport.staff.forEach(function(staffMember) { %>
-            <a href="/shift-member/checkpoint-submit/<%= location %>/<%= checkpointName %>/<%= staffMember %>/<%= patrolReport.reportId %>" class="btn btn-outline-primary col-auto">
-              <%= staffMember %>
-            </a>
-            <% }); %>
+          <% patrolReport.staff.forEach(function(staffMember) { %>
+          <a href="/shift-member/checkpoint-submit/<%= location %>/<%= checkpointName %>/<%= staffMember %>/<%= patrolReport.reportId %>" class="btn btn-outline-primary col-auto">
+            <%= staffMember %>
+          </a>
+          <% }); %>
           <% } else { %>
           <p>No staff information available.</p>
           <% } %>
