Fix for shift member submit

--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -113,7 +113,7 @@
               class="form-check-input"
               id="termsService"
               type="checkbox"
-              name="aggree"
+              name="agree"
               required=""
             />
             <label class="form-label fs--1 text-none" for="termsService"
@@ -128,6 +128,7 @@
             <a class="fs--1 fw-bold" href="/">Sign in to an existing account</a>
           </div>
         </form>
+        
       </div>
     </div>
   </div>
