--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -74,6 +74,7 @@
   <script src="https://threejs.org/build/three.min.js"></script>
   <!-- echarts -->
   <script src="https://cdn.jsdelivr.net/npm/echarts@5"></script>
+  <!-- moment -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
